--- a/Exercise_1/Exercise_1.ipynb
+++ b/Exercise_1/Exercise_1.ipynb
@@ -529,13 +529,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalized_histogram(img_gray, num_bins):\n",
     "    assert len(img_gray.shape) == 2, 'image dimension mismatch'\n",
     "    assert img_gray.dtype == 'float', 'incorrect image type'\n",
+    "    \n",
+    "    hists = np.zeros(40)\n",
+    "    # execute the loop for each pixel in the image \n",
+    "    for i in range(img_gray.shape[0]):\n",
+    "        for j in range(img_gray.shape[1]):\n",
+    "            pos = int(img_gray[i,j] / 255 * num_bins)\n",
+    "            hists[pos] += 1\n",
+    "    \n",
+    "    # normalize the histogram such that its integral (sum) is equal 1\n",
+    "    hists = hists / np.sum(hists)\n",
+    "    # create bins interval\n",
+    "    bins = np.linspace(0, 255, num = hists.size + 1)\n",
+    "    \n",
+    "    ''' working alternative\n",
     "    # normalized image\n",
     "    norm_img_pixels = img_gray / 255\n",
     "    # bin position of each pixel\n",
@@ -554,7 +568,7 @@
     "            hists[i] = 0\n",
     "    # create bins interval\n",
     "    bins = np.linspace(0, 255, num = hists.size + 1)\n",
-    "    \n",
+    "    '''\n",
     "    # checks\n",
     "    print('my hist')\n",
     "    print(hists)\n",
@@ -575,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 198,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -585,8 +599,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37\n",
-      "235.88240000000002\n",
       "my hist\n",
       "[0.00000000e+00 0.00000000e+00 3.74755859e-02 6.01501465e-01\n",
       " 5.70068359e-02 1.69677734e-02 1.53808594e-02 1.10473633e-02\n",
