--- a/Exercise_1/Exercise_1.ipynb
+++ b/Exercise_1/Exercise_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,30 +1223,23 @@
     "        tp = tp + l[idx]\n",
     "    \n",
     "    thresholds = np.linspace(0., 1., 150)\n",
-    "  \n",
+    "    \n",
     "    for t in thresholds:\n",
-    "        tp = tn = fp = fn= 0\n",
-    "        for idx in range(len(d)):\n",
-    "            if d[idx] < t:\n",
-    "                # if l = 1 means i == j  \n",
-    "                tp += l[idx]\n",
-    "                # else d < t and i != j -> fp\n",
-    "                if l[idx] == 0:\n",
-    "                     fp += 1\n",
-    "            else:\n",
-    "                fn += l[idx]\n",
-    "                if l[idx] == 0:\n",
-    "                    tn += 1\n",
+    "        pr = re = 0.\n",
     "        \n",
-    "        if tp == 0 and fp == 0: \n",
-    "            pr = 0.\n",
-    "        else:\n",
+    "        small_dist = l[np.where(d < t)]\n",
+    "        tp = np.count_nonzero(small_dist)\n",
+    "        fp = len(small_dist) - tp\n",
+    "        \n",
+    "        large_dist = l[np.where(d >= t)]\n",
+    "        fn = np.count_nonzero(large_dist)\n",
+    "        tn = len(large_dist) - fn\n",
+    "        \n",
+    "        if tp != 0 or fp != 0: \n",
     "            pr = float(tp) / float(tp + fp)\n",
-    "        if tp == 0 and fn == 0: \n",
-    "            re = 0.\n",
-    "        else:    \n",
+    "        if tp != 0 or fn != 0: \n",
     "            re = float(tp) / float(tp + fn)\n",
-    "        \n",
+    "\n",
     "        precision.append(pr)\n",
     "        recall.append(re)\n",
     "\n",
@@ -1266,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {
     "scrolled": false
    },
@@ -1334,13 +1327,6 @@
     "plt.title('dx/dy histograms')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
