--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,12 @@
     "        # of shape (N, C).                                                          #\n",
     "        #############################################################################\n",
     "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-    "\n",
+    "        \n",
+    "        z2 = np.dot(X, W1) + b1\n",
+    "        a2 = np.maximum(0, z2)\n",
+    "        z3 = np.dot(a2, W2) + b2\n",
+    "        scores = np.exp(z3) / np.sum(np.exp(z3), axis = 1, keepdims = True)\n",
+    "        \n",
     "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "        # If the targets are not given then jump out, we're done\n",
@@ -226,9 +231,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your scores:\n",
+      "[[0.3644621  0.22911264 0.40642526]\n",
+      " [0.47590629 0.17217039 0.35192332]\n",
+      " [0.43035767 0.26164229 0.30800004]\n",
+      " [0.41583127 0.2983228  0.28584593]\n",
+      " [0.36328815 0.32279939 0.31391246]]\n",
+      "\n",
+      "Correct scores:\n",
+      "[[0.3644621  0.22911264 0.40642526]\n",
+      " [0.47590629 0.17217039 0.35192332]\n",
+      " [0.43035767 0.26164229 0.30800004]\n",
+      " [0.41583127 0.2983228  0.28584593]\n",
+      " [0.36328815 0.32279939 0.31391246]]\n",
+      "\n",
+      "Difference between your scores and correct scores:\n",
+      "2.9173411658645065e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a small net and some toy data to check your implementations.\n",
     "# Note that we set the random seed for repeatable experiments.\n",
@@ -329,12 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from numpy import linalg as LA\n",
+    "\n",
     "class TwoLayerNetv2(TwoLayerNet):\n",
-    "    def compute_loss(self, X, y=None, reg=0.0):\n",
+    "    def compute_loss(self, X, y = None, reg = 0.0):\n",
     "        \"\"\"\n",
     "        Compute the loss and gradients for a two layer fully connected neural\n",
     "        network.\n",
@@ -357,7 +387,9 @@
     "        N, D = X.shape\n",
     "\n",
     "        # Compute the forward pass\n",
+    "        \n",
     "        scores = 0.\n",
+    "        \n",
     "        #############################################################################\n",
     "        # TODO: Perform the forward pass, computing the class probabilities for the #\n",
     "        # input. Store the result in the scores variable, which should be an array  #\n",
@@ -365,6 +397,11 @@
     "        #############################################################################\n",
     "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
+    "        z2 = np.dot(X, W1) + b1\n",
+    "        a2 = np.maximum(0, z2)\n",
+    "        z3 = np.dot(a2, W2) + b2\n",
+    "        scores = np.exp(z3) / np.sum(np.exp(z3), axis = 1, keepdims = True)\n",
+    "        \n",
     "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "        # If the targets are not given then jump out, we're done\n",
@@ -380,7 +417,15 @@
     "        # classifier loss.                                                          #\n",
     "        #############################################################################\n",
     "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "        \n",
+    "        one_hot_encoding = np.zeros((X.shape[0], np.max(y) + 1))\n",
+    "        one_hot_encoding[np.arange(y.size), y] = 1\n",
+    "        y = one_hot_encoding\n",
+    "        \n",
+    "        l2 = reg * np.sum(LA.norm(W1) + LA.norm(W2))\n",
     "\n",
+    "        loss =  - (1.0 / X.shape[1]) * np.sum( np.multiply( np.log(scores), y)) + l2\n",
+    "        \n",
     "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "        return loss"
@@ -399,7 +444,9 @@
     "\n",
     "net_v2 = init_toy_model_v2()\n",
     "loss = net_v2.compute_loss(X, y, reg=0.05)\n",
+    "print(\"my loss\", loss)\n",
     "correct_loss = 1.30378789133\n",
+    "print(\"correct_loss\", correct_loss)\n",
     "\n",
     "# should be very small, we get < 1e-12\n",
     "print('Difference between your loss and correct loss:')\n",
@@ -1356,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
