--- a/Exercise_2/Exercise_2_Final_Version.ipynb
+++ b/Exercise_2/Exercise_2_Final_Version.ipynb
@@ -10795,7 +10795,7 @@
     "        Train accuracy is: 63.285714285714285 %\n",
     "        Validation accuracy is: 53.6 %\n",
     "        Accuracy of the network on the 1000 test images: 55.6 %\n",
-    "In this setting, we do not observe any improvement if we increase the number of layers. . \n",
+    "In this setting, we do not observe any improvement if we increase the number of layers.\n",
     "We also check differnet hyperparameter combinations such as: "
    ]
   },
@@ -10831,7 +10831,7 @@
     "                val accuracy: 35.2 %\n",
     "                test accuracy 35.1 %   \n",
     "\n",
-    "Also, we noticed that increasing the number of layers in a fully connected networks is not that beneficial. The best network havving in the setting above, a test accuracy of 57% with 2 hidden layers of 2048 and 1024 units.\n",
+    "Also, we noticed that increasing the number of layers in a fully connected networks is not that beneficial. The best network having in the setting above, a test accuracy of 57% with 2 hidden layers of 2048 and 1024 units.\n",
     "          \n",
     "\n"
    ]
