--- a/Exercise_3/Assignment 3/Exercise_3_colab_final.ipynb
+++ b/Exercise_3/Assignment 3/Exercise_3_colab_final.ipynb
@@ -20,8 +20,14 @@
       },
       "outputs": [],
       "source": [
-        "Name = \"\"\n",
-        "Matriculation_Number = \"\""
+        "Name = \"Luisa Danalachi\"\n",
+        "Matriculation_Number = \"7022909\"\n",
+        "\n",
+        "Name = \"Victor Martinez Palomares\"\n",
+        "Matriculation_Number = \"7021729\"\n",
+        "\n",
+        "Name = \"Soham Roy\"\n",
+        "Matriculation_Number = \"7028704\""
       ]
     },
     {
@@ -37,7 +43,7 @@
         },
         "outputId": "c0f696f4-a043-4e2b-eb1e-fbdab244351b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -50,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "qHjjzGm1CpFe"
       },
@@ -235,6 +241,144 @@
       },
       "source": [
         "#### Wirte your report for Q3 in this cell.\n",
+        "##### **Q3.a)**\n",
+        "\n",
+        "All the runs with the results and plots are in the folder q3a.\n",
+        "We trained the models for 30 epochs and tried different augmentation combinations. \n",
+        "\n",
+        "Our approach was to try a combination of data augmentations: \n",
+        "1. \n",
+        "Geometric: \n",
+        " \n",
+        "    transforms.RandomRotation([-90, 90]) \n",
+        "\n",
+        "    transforms.RandomHorizontalFlip()  \n",
+        "\n",
+        "    transforms.RandomAffine(0, translate=(0.4, 0.5)) \n",
+        "\n",
+        "Color:\n",
+        "\n",
+        "    transforms.ColorJitter(brightness = 0.2, hue = 0.2, saturation = 0.2)\n",
+        "\n",
+        "First trained a model with RandomRotation, then RandomRotation + RandomHorizontalFlip and so on. You can see the result of all training in the folder q3a, all_tests.out. Based on the results, we noticed that transforms.RandomAffine(0, translate=(0.4, 0.5)) is an impediment to the models performance, which significantly reduces the accuracy. Therefore, we chose to train again models with different data augmentations without RandomAffine. From the last run with all combinations, file all_test_without_affine.out, we have the best accuracy only on the data augmentation with RandomRotation, 77.0 %.\n",
+        "\n",
+        "We also tried other combinations suchs as:\n",
+        "2.  \n",
+        "    RandomHorizontalFlip(p=0.5)\n",
+        "\n",
+        "    ColorJitter(brightness=[0.0, 3.0], contrast=None, saturation=None, hue=None)\n",
+        "\n",
+        "on which we achieved a validation accuracy of 78.9 %. The training result can be seen in folder q3a, file \"test1.out\" and the plot picture is test1_val_train_acc.PNG. \n",
+        "\n",
+        "3. \n",
+        "\n",
+        "    RandomHorizontalFlip(p=0.5),\n",
+        "\n",
+        "    RandomRotation(degrees=[-30.0, 30.0], interpolation=nearest, expand=False, fill=0), \n",
+        "\n",
+        "    ColorJitter(brightness=[0.8, 1.2], contrast=None, saturation=[0.8, 1.2], hue=[-0.2, 0.2])]\n",
+        "\n",
+        "on which we achieved a validation accuracy of 76.5 %. The training result can be seen in folder q3a, file \"test2.out\" and the plot picture is test2_val_train_acc.PNG.     \n",
+        "\n",
+        "4. We also tried a combination of two: Geometric + Color. \n",
+        "\n",
+        "    transforms.RandomRotation([-90, 90])\n",
+        "\n",
+        "    transforms.RandomHorizontalFlip()\n",
+        "\n",
+        "    transforms.ColorJitter(brightness = 0.2)\n",
+        "\n",
+        "    transforms.ColorJitter(hue = 0.2)\n",
+        "\n",
+        "    transforms.ColorJitter(saturation = 0.2)\n",
+        "\n",
+        "You can find the results of all test in file test_geo_color.out and its corresponding plots in folder test_geo_color. In this experiment we trained models with every combination of geometric and color data augmentation. You can see the results in test_geo_color.out. Based on it the best val accuracy is  86.8 % using data augmentation type:\n",
+        "\n",
+        "    RandomHorizontalFlip(p=0.5)\n",
+        "\n",
+        "    ColorJitter(brightness=None, contrast=None, saturation=[0.8, 1.2], hue=None)\n",
+        "\n",
+        "\n",
+        "We performed finetuning for this combination. We tried different hyperparameters, for RandomHorizontalFlip, the value p  from 0.1 to 1.1 with a step 0.1, and for Saturation from 0.2 to 2.0 with step 0.2. After training all models we have the best val accuracy 86.6 % for 30 epochs on the hyperparameter combination of :\n",
+        "\n",
+        "    p = 0.3\n",
+        "    saturation = 0.4\n",
+        "    \n",
+        "The final accuracy obtained for training the model for 50 epochs using these hyperparameters: 87.0 % (epoch 48).\n",
+        "\n",
+        "\n",
+        "5.  In addition to this we did a study the impact of data augmentations of the training and validation accuracy of the model. The augmentations has been performed on the geometric space using the torch.transforms function Random affine and in the colour space using the function ColourJitter. On a deeper level we wanted to study the impact of each of the parameters of these two functions on the model performance. The impact of one parameter of each function is monitored by changing its values and keeping track of the result while keeping other parameters constant. \n",
+        "\n",
+        "Random Affine has the parameters Degrees of rotation, Translation and Scale\n",
+        "\n",
+        "a.For \"degree\"\n",
+        "Here we performed six experiments with degree values 0-30, 30-60,60-90,90-120 , 120-150 and 150-180\n",
+        "\n",
+        "\\begin{array}{|c|c|c|c|}\n",
+        "    \\hline\n",
+        "       Sr.no & parameter value & trainAcc & valAcc\\\\\\hline\n",
+        "       1&0,30 & 72.0 & 69.1\\\\\\hline\n",
+        "       2&30,60 & 73.18 &  70.1\\\\\\hline\n",
+        "       3&60,90 & 71.88 &  70.4\\\\\\hline\n",
+        "       4&90,120 &  71.76 &  68.8\\\\\\hline\n",
+        "       5&120,150 &  73.57 &  70.0\\\\\\hline\n",
+        "       6&150,180 &  72.33 &  68.9\\\\\\hline\n",
+        "\\end{array}\n",
+        "\n",
+        "\n",
+        "Observation :- The degree of rotation has little effect on the model performance while the mean of training accuracy is around 72 and variance of 0.8, while that of the validation accuracy is 69.3 and 0.66 respectively.\n",
+        "  \n",
+        "b. For \"translation\"\n",
+        "\n",
+        "Here we performed three experiments with translation  values 0.1-0.3, 0.3-0.5,0.5-0.7 respectively\n",
+        "\n",
+        "\\begin{array}{|c|c|c|c|}\n",
+        "    \\hline\n",
+        "       Sr.no & parameter value & trainAcc & valAcc\\\\\\hline\n",
+        "       1&0.1,0.3 & 71.88 & 70.04\\\\\\hline\n",
+        "       2&0.3,0.5 & 66.45 &  64.2\\\\\\hline\n",
+        "       3&0.5,0.7 & 52.19 &  52.0\\\\\\hline\n",
+        "\\end{array}\n",
+        "\n",
+        "\n",
+        "Observation :-From the above results it is evident that the translation factor has a big impact on the model performance with increasing values leading to a degraded performance. The training and validation accuracy has a variance of 97 and 84 respectively. The best results are obtained with the translation values in range less than 0.3.\n",
+        "\n",
+        "c. For \"scale\"\n",
+        "\n",
+        "Here we performed four experiments with scale  values 0.1-0.3, 0.3-0.5,0.5-0.7 respectively\n",
+        "\n",
+        "\\begin{array}{|c|c|c|c|}\n",
+        "    \\hline\n",
+        "       Sr.no & parameter value & trainAcc & valAcc\\\\\\hline\n",
+        "       1&0.1,0.3 & 38.89 & 34.7\\\\\\hline\n",
+        "       2&0.3,0.5 & 59.62 &  56.8\\\\\\hline\n",
+        "       3&0.5,0.7 & 72.14 &  67.8\\\\\\hline\n",
+        "       4&0.7,0.9 & 77.56 &  74.4\\\\\\hline\n",
+        "\\end{array}\n",
+        "\n",
+        "\n",
+        "Observation :- From the above results it is evident that the scale factor has a big impact on the model performance with increasing values leading to a better performance. Also for lower value there is a fluctuation of loss and accuracy scores with the epochs which gets more consistent with increasing scale values.  The training and validation accuracy has a variance of 303 and 305 respectively. The best results are obtained with the translation values above 0.7 .\n",
+        "\n",
+        "ColourJitter –  For each of colourjitter parameters namely , Brightness, Contrast, saturation and hue , we are testing two models each for one higher and lower value to get an idea of the value of the parameters that best approximates to the data\n",
+        "\n",
+        "\\begin{array}{|c|c|c|c|}\n",
+        "    \\hline\n",
+        "       Sr.no & parameter name&parameter value & trainAcc & valAcc\\\\\\hline\n",
+        "       1& brightness&None & 79.76 & 76.6\\\\\\hline\n",
+        "       2&brightness &0.7& 71.08 &  67.9\\\\\\hline\n",
+        "       3&contrast & 0.2 & 73.01 &  68.2\\\\\\hline\n",
+        "       4&contrast &0.8& 68.32 &  66.2\\\\\\hline\n",
+        "       5&saturation &0.1& 73.48 &  72.3\\\\\\hline\n",
+        "       6&saturation &0.9& 72.08 &  69.6\\\\\\hline\n",
+        "       7&hue &0.1& 75.52 &  73.5\\\\\\hline\n",
+        "       8&hue &0.5& 73.02 &  70.08\\\\\\hline\n",
+        "\\end{array}\n",
+        "\n",
+        "\n",
+        "Observation :- Lower value of Brightness parameter yields a better performance score.Lower contract leads to a better validation accuracy score but also results in more overfitting compared to a model with higher contrast value.Extremities of Saturation does not seem to be a big impact on the model performance, though lower values seems to be slightly better than higher counterparts.Lower value of hue gives a slightly improved model performance but does not a big impact on the scores.\n",
+        "\n",
+        "Deriving an intuition from these experiemnts here and from the ones reported above the final accuracy obtained for training the model for 50 epochs using these hyperparameters: 87.0 % (epoch 48).\n",
+        "\n",
         "\n",
         "##### **Q3.b)**\n",
         "\\begin{array}{|c|c|c|c|}\n",
@@ -262,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "4SH1QaubCpFk",
         "outputId": "9696201d-5014-443c-fa0f-ebbb71330739",
@@ -369,7 +513,7 @@
         "cifar_dataset = torchvision.datasets.CIFAR10(root='datasets/',\n",
         "                                           train=True,\n",
         "                                           transform=norm_transform,\n",
-        "                                           download=True)\n",
+        "                                           download=False)\n",
         "\n",
         "test_dataset = torchvision.datasets.CIFAR10(root='datasets/',\n",
         "                                          train=False,\n",
@@ -1097,7 +1241,9 @@
         "# best model so far and perform testing with this model.                        #\n",
         "#################################################################################\n",
         "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-        "\n",
+        "checkpoint = torch.load('bestmodel_q1.ckpt')\n",
+        "model.load_state_dict(checkpoint)\n",
+        "model.eval()\n",
         "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
         "with torch.no_grad():\n",
         "    correct = 0\n",
@@ -1613,7 +1759,7 @@
       "metadata": {
         "id": "ftLUcj_QoJnO"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1701,12 +1847,6 @@
         "          print('Validataion accuracy is: {} %'.format(val_accuracy))\n",
         "          val_acc_history.append(val_accuracy)\n",
         "          val_loss_history.append(loss.item())\n",
-        "          #################################################################################\n",
-        "          # TODO: Q2.b Implement the early stopping mechanism to save the model which has #\n",
-        "          # acheieved the best validation accuracy so-far.                                #\n",
-        "          #################################################################################\n",
-        "          # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-        "          # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
         "\n",
         "      model.train()\n",
         "  # plot the accuracy history\n",
@@ -1753,7 +1893,7 @@
         "id": "SxzqA2PvotC0",
         "outputId": "ffc70c5a-5d33-45fd-99ce-3e27fe39d2db"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1918,7 +2058,7 @@
         "cifar_dataset = torchvision.datasets.CIFAR10(root='datasets/',\n",
         "                                           train=True,\n",
         "                                           transform=norm_transform,\n",
-        "                                           download=True)\n",
+        "                                           download=False)\n",
         "\n",
         "test_dataset = torchvision.datasets.CIFAR10(root='datasets/',\n",
         "                                          train=False,\n",
